[gd_scene load_steps=10 format=2]

[ext_resource path="res://Grafik/Assets/GUI/level_bulb.png" type="Texture" id=1]
[ext_resource path="res://Szenen/Levels/LvlIndex.gd" type="Script" id=2]
[ext_resource path="res://Grafik/Assets/GUI/level_bulb2.png" type="Texture" id=3]
[ext_resource path="res://Szenen/Levels/LevelSum.gd" type="Script" id=4]
[ext_resource path="res://Grafik/Assets/Dachboden/Module/light2.png" type="Texture" id=6]
[ext_resource path="res://Grafik/Assets/GUI/particle.png" type="Texture" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.679012, 0.901235, 0.962963, 0.987654 )
colors = PoolColorArray( 1, 0.9375, 0.9375, 1, 1, 0.93072, 0.921165, 1, 1, 0.803922, 0.615686, 1, 1, 0.862362, 0.75648, 1, 1, 0.901662, 0.85116, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 3 )

[node name="LevelSum" type="Control"]
margin_left = 1.0
margin_right = 97.0
margin_bottom = 101.0
rect_min_size = Vector2( 96, 100 )
mouse_default_cursor_shape = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 48, 49 )
texture = ExtResource( 1 )

[node name="on" type="Sprite" parent="."]
visible = false
position = Vector2( 49, 28 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="on"]
position = Vector2( -1, -1 )
amount = 13
lifetime = 3.0
explosiveness = 0.41
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 23.07
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity_random = 0.5
radial_accel = -10.34
angle = 99.3
angle_random = 0.14
scale_amount = 2.0
color_ramp = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="on"]
position = Vector2( -2, 2 )
scale = Vector2( 1.0625, 1.0625 )
texture = ExtResource( 6 )
color = Color( 1, 1, 1, 0.643137 )

[node name="LvlIndex" type="Label" parent="."]
margin_left = 1.0
margin_top = 77.0
margin_right = 96.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 0.803922, 0.615686, 0.87451 )
custom_fonts/font = SubResource( 2 )
text = "Level 0"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star1" type="Sprite" parent="."]
visible = false
position = Vector2( 21.6534, 63.2116 )
scale = Vector2( 0.333151, 0.333151 )
texture = ExtResource( 7 )

[node name="star2" type="Sprite" parent="."]
visible = false
position = Vector2( 47.6534, 63.2116 )
scale = Vector2( 0.333151, 0.333151 )
texture = ExtResource( 7 )

[node name="star3" type="Sprite" parent="."]
visible = false
position = Vector2( 73.6534, 63.2116 )
scale = Vector2( 0.333151, 0.333151 )
texture = ExtResource( 7 )

[connection signal="gui_input" from="." to="." method="_on_LevelSum_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_LevelSum_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LevelSum_mouse_exited"]
